deployment-k8-istio/TrainTicketFaults/ts-deployment-part1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-account-mongo
spec:
  selector:
    matchLabels:
      app: ts-account-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-account-mongo
    spec:
      containers:
        - name: ts-account-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-assurance-mongo
spec:
  selector:
    matchLabels:
      app: ts-assurance-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-assurance-mongo
    spec:
      containers:
        - name: ts-assurance-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-config-mongo
spec:
  selector:
    matchLabels:
      app: ts-config-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-config-mongo
    spec:
      containers:
        - name: ts-config-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-consign-mongo
spec:
  selector:
    matchLabels:
      app: ts-consign-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-consign-mongo
    spec:
      containers:
        - name: ts-consign-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-consign-price-mongo
spec:
  selector:
    matchLabels:
      app: ts-consign-price-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-consign-price-mongo
    spec:
      containers:
        - name: ts-consign-price-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-contacts-mongo
spec:
  selector:
    matchLabels:
      app: ts-contacts-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-contacts-mongo
    spec:
      containers:
        - name: ts-contacts-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-food-map-mongo
spec:
  selector:
    matchLabels:
      app: ts-food-map-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-food-map-mongo
    spec:
      containers:
        - name: ts-food-map-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-food-mongo
spec:
  selector:
    matchLabels:
      app: ts-food-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-food-mongo
    spec:
      containers:
        - name: ts-food-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-inside-payment-mongo
spec:
  selector:
    matchLabels:
      app: ts-inside-payment-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-inside-payment-mongo
    spec:
      containers:
        - name: ts-inside-payment-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-news-mongo
spec:
  selector:
    matchLabels:
      app: ts-news-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-news-mongo
    spec:
      containers:
        - name: ts-news-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-order-mongo
spec:
  selector:
    matchLabels:
      app: ts-order-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-order-mongo
    spec:
      containers:
        - name: ts-order-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-order-other-mongo
spec:
  selector:
    matchLabels:
      app: ts-order-other-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-order-other-mongo
    spec:
      containers:
        - name: ts-order-other-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-payment-mongo
spec:
  selector:
    matchLabels:
      app: ts-payment-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-payment-mongo
    spec:
      containers:
        - name: ts-payment-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-price-mongo
spec:
  selector:
    matchLabels:
      app: ts-price-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-price-mongo
    spec:
      containers:
        - name: ts-price-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-rebook-mongo
spec:
  selector:
    matchLabels:
      app: ts-rebook-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-rebook-mongo
    spec:
      containers:
        - name: ts-rebook-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-route-mongo
spec:
  selector:
    matchLabels:
      app: ts-route-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-route-mongo
    spec:
      containers:
        - name: ts-route-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-security-mongo
spec:
  selector:
    matchLabels:
      app: ts-security-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-security-mongo
    spec:
      containers:
        - name: ts-security-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-station-mongo
spec:
  selector:
    matchLabels:
      app: ts-station-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-station-mongo
    spec:
      containers:
        - name: ts-station-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-ticket-office-mongo
spec:
  selector:
    matchLabels:
      app: ts-ticket-office-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-ticket-office-mongo
    spec:
      containers:
        - name: ts-ticket-office-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-train-mongo
spec:
  selector:
    matchLabels:
      app: ts-train-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-train-mongo
    spec:
      containers:
        - name: ts-train-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-travel-mongo
spec:
  selector:
    matchLabels:
      app: ts-travel-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-travel-mongo
    spec:
      containers:
        - name: ts-travel-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-travel2-mongo
spec:
  selector:
    matchLabels:
      app: ts-travel2-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-travel2-mongo
    spec:
      containers:
        - name: ts-travel2-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-verification-code-mongo
spec:
  selector:
    matchLabels:
      app: ts-verification-code-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-verification-code-mongo
    spec:
      containers:
        - name: ts-verification-code-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-voucher-mysql
spec:
  selector:
    matchLabels:
      app: ts-voucher-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-voucher-mysql
    spec:
      containers:
        - name: ts-voucher-mysql
          image: mysql:5.6.35
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: ts-account-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-account-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-assurance-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-assurance-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-config-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-config-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-consign-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-consign-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-consign-price-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-consign-price-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-contacts-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-contacts-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-food-map-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-food-map-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-food-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-food-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-inside-payment-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-inside-payment-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-news-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-news-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-order-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-order-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-order-other-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-order-other-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-payment-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-payment-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-price-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-price-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-rebook-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-rebook-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-route-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-route-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-security-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-security-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-station-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-station-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-ticket-office-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-ticket-office-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-train-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-train-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-travel-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-travel-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-travel2-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-travel2-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-verification-code-mongo
spec:
  ports:
    - port: 27017
  selector:
    app: ts-verification-code-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: ts-voucher-mysql
spec:
  ports:
    - port: 3306
  selector:
    app: ts-voucher-mysql
