deployment-k8-istio/TrainTicketFaults/ts-deployment-part3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-ui-dashboard
spec:
  selector:
    matchLabels:
      app: ts-ui-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-ui-dashboard
    spec:
      containers:
      - name: ts-ui-dashboard
        image: em135/ts-ui-dashboard1:latest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
---

apiVersion: v1
kind: Service
metadata:
  name: ts-ui-dashboard
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      nodePort: 32677
  selector:
   app: ts-ui-dashboard
---
# This is a bit deprecated
# ###########################################################################
# # Ingress resource (gateway)
# ##########################################################################
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: gateway
#   annotations:
#     kubernetes.io/ingress.class: "istio"
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /js/.*
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /css/.*
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /add&delete.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /admin.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /admin_config.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /admin_contacts.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /admin_price.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /admin_route.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /admin_station.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /admin_train.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /admin_travel.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /admin_user.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /adminlogin.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /voucher.html
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /assets/.*
#         backend:
#           serviceName: ts-ui-dashboard
#           servicePort: 8080
#       - path: /account/.*
#         backend:
#           serviceName: ts-sso-service
#           servicePort: 12349
#       - path: /register
#         backend:
#           serviceName: ts-register-service
#           servicePort: 12344
#       - path: /register/.*
#         backend:
#           serviceName: ts-register-service
#           servicePort: 12344
#       - path: /login/.*
#         backend:
#           serviceName: ts-login-service
#           servicePort: 12342
#       - path: /login
#         backend:
#           serviceName: ts-login-service
#           servicePort: 12342
#       - path: /logout
#         backend:
#           serviceName: ts-login-service
#           servicePort: 12342
#       - path: /verification/.*
#         backend:
#           serviceName: ts-verification-code-service
#           servicePort: 15678
#       - path: /station/.*
#         backend:
#           serviceName: ts-station-service
#           servicePort: 12345
#       - path: /train/.*
#         backend:
#           serviceName: ts-train-service
#           servicePort: 14567
#       - path: /config/.*
#         backend:
#           serviceName: ts-config-service
#           servicePort: 15679
#       - path: /securityConfig/.*
#         backend:
#           serviceName: ts-security-service
#           servicePort: 11188
#       - path: /security/.*
#         backend:
#           serviceName: ts-security-service
#           servicePort: 11188
#       - path: /execute/.*
#         backend:
#           serviceName: ts-execute-service
#           servicePort: 12386
#       - path: /contacts/.*
#         backend:
#           serviceName: ts-contacts-service
#           servicePort: 12347
#       - path: /order/.*
#         backend:
#           serviceName: ts-order-service
#           servicePort: 12031
#       - path: /orderOther/.*
#         backend:
#           serviceName: ts-order-other-service
#           servicePort: 12032
#       - path: /travel/.*
#         backend:
#           serviceName: ts-travel-service
#           servicePort: 12346
#       - path: /travel2/.*
#         backend:
#           serviceName: ts-travel2-service
#           servicePort: 16346
#       - path: /preserve/.*
#         backend:
#           serviceName: ts-preserve-service
#           servicePort: 14568
#       - path: /preserveOther/.*
#         backend:
#           serviceName: ts-preserve-other-service
#           servicePort: 14569
#       - path: /preserve
#         backend:
#           serviceName: ts-preserve-service
#           servicePort: 14568
#       - path: /preserveOther
#         backend:
#           serviceName: ts-preserve-other-service
#           servicePort: 14569
#       - path: /price/.*
#         backend:
#           serviceName: ts-price-service
#           servicePort: 16579
#       - path: /basic/.*
#         backend:
#           serviceName: ts-basic-service
#           servicePort: 15680
#       - path: /ticketinfo/.*
#         backend:
#           serviceName: ts-ticketinfo-service
#           servicePort: 15681
#       - path: /notification/.*
#         backend:
#           serviceName: ts-notification-service
#           servicePort: 17853
#       - path: /inside_payment/.*
#         backend:
#           serviceName: ts-inside-payment-service
#           servicePort: 18673
#       - path: /payment/.*
#         backend:
#           serviceName: ts-payment-service
#           servicePort: 19001
#       - path: /rebook/.*
#         backend:
#           serviceName: ts-rebook-service
#           servicePort: 18886
#       - path: /cancel/.*
#         backend:
#           serviceName: ts-cancel-service
#           servicePort: 18885
#       - path: /cancelOrder
#         backend:
#           serviceName: ts-cancel-service
#           servicePort: 18885
#       - path: /cancelCalculateRefund
#         backend:
#           serviceName: ts-cancel-service
#           servicePort: 18885
#       - path: /route/.*
#         backend:
#           serviceName: ts-route-service
#           servicePort: 11178
#       - path: /assurance/.*
#         backend:
#           serviceName: ts-assurance-service
#           servicePort: 18888
#       - path: /office/.*
#         backend:
#           serviceName: ts-ticket-office-service
#           servicePort: 16108
#       - path: /travelPlan/.*
#         backend:
#           serviceName: ts-travel-plan-service
#           servicePort: 14322
#       - path: /consign/.*
#         backend:
#           serviceName: ts-consign-service
#           servicePort: 16111
#       - path: /getVoucher
#         backend:
#           serviceName: ts-voucher-service
#           servicePort: 16101
#       - path: /routePlan/.*
#         backend:
#           serviceName: ts-route-plan-service
#           servicePort: 14578
#       - path: /food/.*
#         backend:
#           serviceName: ts-food-service
#           servicePort: 18856
#       - path: /news-service/.*
#         backend:
#           serviceName: ts-news-service
#           servicePort: 12862
#       - path: /adminbasic/.*
#         backend:
#           serviceName: ts-admin-basic-info-service
#           servicePort: 18767
#       - path: /adminorder/.*
#         backend:
#           serviceName: ts-admin-order-service
#           servicePort: 16112
#       - path: /adminroute/.*
#         backend:
#           serviceName: ts-admin-route-service
#           servicePort: 16113
#       - path: /admintravel/.*
#         backend:
#           serviceName: ts-admin-travel-service
#           servicePort: 16114
#       - path: /adminuser/.*
#         backend:
#           serviceName: ts-admin-user-service
#           servicePort: 16115
# ---
